--- a/ansible/contrail-3.1/tasks/pre-tasks-centos.yml
+++ b/ansible/contrail-3.1/tasks/pre-tasks-centos.yml
@@ -1,3 +1,4 @@
+# Build local repo
 - name: Check Contrail installation package.
   stat: path=/opt/{{ contrail_pkg.split('/')[-1] }}
   register: pkg_status
@@ -25,4 +26,28 @@
 - name: Create yum repo configuration.
   copy: src=files/contrail-install.repo dest=/etc/yum.repos.d
   when: repo_status.stat.exists == False
+
+# Install dependent packages.
+- yum: name=python state=latest
+- yum: name=python-Fabric
+- yum: name=PyYAML
+
+# Update system limits.
+- name: Update /etc/sysctl.conf.
+  lineinfile:
+    dest: /etc/sysctl.conf
+    line: "fs.file-max = 165535"
+- command: sysctl -p
+  become: root
+
+- name: Update /etc/security/limits.conf
+  lineinfile:
+    dest: /etc/security/limits.conf
+    line: "{{ item }}"
+  with_items:
+    - "root soft nproc 65535"
+    - "* hard nofile 65535"
+    - "* soft nofile 65535"
+    - "* hard nproc 65535"
+    - "* soft nofile 65535"
 
