--- a/ansible/contrail-3.1/roles/contrail-control/tasks/main.yml
+++ b/ansible/contrail-3.1/roles/contrail-control/tasks/main.yml
@@ -4,7 +4,7 @@
     name: contrail-openstack-control
 
 # Control services
-- template: src=templates/{{ item }} dest=/etc/contrail/
+- template: src=templates/{{ item }}.j2 dest=/etc/contrail/{{ item }}
   with_items:
     - contrail-control.conf
     - contrail-control-nodemgr.conf
