--- a/ansible/contrail-3.1/roles/contrail-webui/tasks/main.yml
+++ b/ansible/contrail-3.1/roles/contrail-webui/tasks/main.yml
@@ -4,7 +4,7 @@
     name: contrail-openstack-webui
 
 # Web UI services
-- template: src=templates/{{ item }} dest=/etc/contrail/
+- template: src=templates/{{ item }}.j2 dest=/etc/contrail/{{ item }}
   with_items:
     - config.global.js
     - contrail-webui-userauth.js
